--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "~9.1.3",
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
+    "atrament": "^1.1.0",
     "karma-firefox-launcher": "^1.3.0",
     "karma-junit-reporter": "^2.0.1",
+    "ngx-cookie-service": "^3.0.4",
     "rxjs": "~6.5.5",
     "tslib": "^1.11.1",
     "zone.js": "~0.10.3"
